--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
       </div>
     </nav>
 
-    <!-- Intro Header -->
+    <!-- Intro Header 
     <header class="masthead">
       <div class="intro-body">
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <!-- <h1 class="brand-heading">GRAYSCALE</h1>
+               <h1 class="brand-heading">GRAYSCALE</h1>
               <p class="intro-text">A free, responsive, one page Bootstrap theme.
-                <br>Created by Start Bootstrap.</p> -->
+                <br>Created by Start Bootstrap.</p> 
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
@@ -65,7 +65,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </header> -->
 
     <!-- About Section -->
     <section id="about" class="content-section text-center">
