--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       </div>
     </nav>
 
-    <!-- Intro Header 
+    <!-- Intro Header -->
     <header class="masthead">
       <div class="intro-body">
-        <div class="container">
+        <!--<div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto">
                <h1 class="brand-heading">GRAYSCALE</h1>
@@ -63,9 +63,9 @@
               </a>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
-    </header> -->
+    </header> 
 
     <!-- About Section -->
     <section id="about" class="content-section text-center">
