--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About Grayscale</h2>
-            <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-            <p>This theme features stock photos by
-              <a href="http://gratisography.com/">Gratisography</a>
-              along with a custom Google Maps skin courtesy of
-              <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-            <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with SASS and LESS files for easy customization!</p>
+            <h2>About Me</h2>
+            <p>Standup Comedian, Anchor, Actor, Writer, Mimicry Artist. 
+              </p>
+            <p>Performed infront of famous and legend comedians and actors of Indian Film Industry like Johny Lever, Govinda, Chunky Pandey, 
+              Kiku Sharda, Rajeev Nigam, Raju Srivastava, Kamya Punjabi, Rajiv Thakur, Kainaat Arora, 
+              Paritosh Tripathi, Sunil Sawara, Surinder Angural, Jeetu Gupta Team of 'Bhabhi Ji Ghar Par Hain' at Jaipur Laughter Festival. </p>
+            <p>With over 30+ sold out shows, performed in more than 60 venues including cities like Jaipur, 
+              Mumbai, Ranchi, Lucknow, Kanpur, Indore.</p>
           </div>
         </div>
       </div>
@@ -89,9 +89,9 @@
     <section id="download" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
-          <h2>Download Grayscale</h2>
-          <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+          <h2>My Journey</h2>
+          <p>Watch My Journey</p>
+          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">EXPLORE</a>
         </div>
       </div>
     </section>
@@ -101,27 +101,25 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Contact Start Bootstrap</h2>
-            <p>Feel free to leave us a comment on the
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
-              on Start Bootstrap to give some feedback about this theme!</p>
+            <h2>Contact Me</h2>
+            <p>Feel free to contact me</p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
+                <a href="https://twitter.com/ComedianLakshya">
                   <i class="fa fa-twitter fa-fw"></i>
                   <span class="network-name">Twitter</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg">
+                <a href="https://www.facebook.com/lakshya.king.7">
                   <i class="fa fa-github fa-fw"></i>
-                  <span class="network-name">Github</span>
+                  <span class="network-name">Facebook</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg">
+                <a href="https://www.youtube.com/channel/UCqJCjk29Vn5qQ2iIMzcz_tw">
                   <i class="fa fa-google-plus fa-fw"></i>
-                  <span class="network-name">Google+</span>
+                  <span class="network-name">Youtube</span>
                 </a>
               </li>
             </ul>
