--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">GALLERY</a>
+              <a class="nav-link js-scroll-trigger" href="#download">MY JOURNEY</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
