--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <p>Website Build By : FutureLabs (Contact : futurelabs.app@gmail.com)</p>
+        <p>Website Build By : FutureLabs (Contact : futurelabs.app@gmail.com / +91-9044126091)</p>
       </div>
     </footer>
 
