--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="col-lg-8 mx-auto">
           <h2>My Journey</h2>
           <p>Watch My Journey</p>
-          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">EXPLORE</a>
+          <a href="https://www.instagram.com/comedian_lakshya_nigam/?hl=en" class="btn btn-default btn-lg">EXPLORE</a>
         </div>
       </div>
     </section>
