--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="col-lg-8 mx-auto">
           <h2>My Journey</h2>
           <p>Watch My Journey</p>
-          <a href="https://www.instagram.com/comedian_lakshya_nigam/?hl=en" class="btn btn-default btn-lg">EXPLORE</a>
+          <a href="https://praneet460.github.io/testing/juicebox_gallery/index.html" class="btn btn-default btn-lg">EXPLORE</a>
         </div>
       </div>
     </section>
@@ -115,6 +115,12 @@
                 <a href="https://twitter.com/ComedianLakshya" class="btn btn-default btn-lg">
                   <i class="fa fa-twitter fa-fw"></i>
                   <span class="network-name">Twitter</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.instagram.com/comedian_lakshya_nigam/?hl=en" class="btn btn-default btn-lg">
+                  <i class="fa fa-instagram fa-fw"></i>
+                  <span class="network-name">Instagram</span>
                 </a>
               </li>
               <li class="list-inline-item">
